fix navbar z-index

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -77,7 +77,7 @@
   height: 3.5rem;
   width: 100%;
   position: relative;
-  z-index: 2;
+  z-index: 5;
 
   .navbar {
     position: fixed;
